Creacion de planes de pagos, botones y cambios de referencias

--- a/index.html
+++ b/index.html
@@ -45,16 +45,62 @@
    
     <!-- Inicio cuerpo -->
 
-    <section>
+    <div class="pag-inicio">
+        <div class="img-izq">
+            <div class="imagen-container">
+                <img src="./imagenes/musculacion.jpg" alt="">
+            </div>
+            <div class="imagen-container">
+                <img src="./imagenes/squash.jpg" alt="">
+            </div>
+        </div>
+        <main class="planes">
+            <div class="planes1">
+                <div class="plan-musc">
+                    <button> PLAN MUSCULACIÓN $7500</button>
+                </div>
+                <div class="plan-squash">
+                    <p> PLAN MUSCULACIÓN + SQUASH</p>
+                    <P> $10500</P>
+                </div>
+            </div>
+            <div class="planes2">
+                <div class="plan-boxeo">
+                    <p> PLAN MUSCULACIÓN + BOXEO</p>
+                    <P> $9500</P>
+                </div>
+                <div class="plan-muaythai">
+                    <p> PLAN MUSCULACIÓN + MUAY THAI</p>
+                    <P> $11500</P>
+                </div>
+            </div>
+        </main>
+        <div class="img-der">
+            <div class="imagen-container">
+                <img src="./imagenes/boxeomasculino.jpg" alt="">
+            </div>
+            <div class="imagen-container">
+                <img src="./imagenes/muaythai.jpg" alt="">
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+    <!-- <section>
         <div>
-            <div>
+            <div class="imagen-container">
                 <img src="./imagenes/Musculacion.jpg" alt="">
             </div>
             <p>MUSCULACIÓN</p>
         </div>
         
         <div>
-            <div>
+            <div class="imagen-container">
                 <img src="./imagenes/boxeomasculino.jpg" alt="">
             </div>
             <p>BOXEO</p>
@@ -62,18 +108,18 @@
     </section>
     <section>    
         <div>
-            <div>
+            <div class="imagen-container">
                 <img src="./imagenes/squash.JPG" alt="">
             </div>
             <p>SQUASH</p>
         </div>
         <div>
-            <div>
+            <div class="imagen-container">
                 <img src="./imagenes/Muay thai.jpg" alt="">
             </div>
             <p>ARTES MARCIALES</p>
         </div>
-    </section>
+    </section> -->
 
     <!-- Inicio Footer -->
 <footer>
