creacion y utilizacion de maps colores

--- a/pages/miperfil.html
+++ b/pages/miperfil.html
@@ -22,7 +22,7 @@
     <header>
         <section class="seccion-titulo">
             <p>
-                <a class="nombregimnasio" href="../index.html">PROCENTER</a>
+                <a  href="../index.html">PROCENTER</a>
             </p>
             
             <div class="logoInicio-padre">
