--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <div class="pag-inicio">
         <div class="img-izq">
             <div class="imagen-container">
-                <img src="./imagenes/musculacion.jpg" alt="">
+                <img src="/imagenes/musculacion.jpg" alt="">
             </div>
             <div class="imagen-container">
-                <img src="./imagenes/squash.jpg" alt="">
+                <img src="/imagenes/squash.jpg" alt="">
             </div>
         </div>
         <main class="planes">
@@ -74,10 +74,10 @@
         </main>
         <div class="img-der">
             <div class="imagen-container">
-                <img src="./imagenes/boxeomasculino.jpg" alt="">
+                <img src="/imagenes/boxeomasculino.jpg" alt="">
             </div>
             <div class="imagen-container">
-                <img src="./imagenes/muaythai.jpg" alt="">
+                <img src="/imagenes/muaythai.jpg" alt="">
             </div>
         </div>
     </div>
