--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -53,12 +53,18 @@
         <div class="horarios">
             <div>
                 <img src="../imagenes/Horarios.png" alt="">
+                <p class="tablets-y-menos">Lunes: Jiujitsu 15hs, Jiujitsu 19hs, Boxeo 19hs, Full-contact 20hs, TKD 20hs</p>
+                <p class="tablets-y-menos">Martes: TKD 10hs, Danza clasica 18:30hs, Karate 19hs</p>
+                <p class="tablets-y-menos">Miercoles: Jiujitsu 15hs, Danza clasica 18:30hs, Jiujitsu 19hs, Boxeo 19hs, Full-contact 20hs, TKD 20hs</p>
+                <p class="tablets-y-menos">Jueves: TKD 10hs, Danza clasica 18:30hs, Karate 19hs</p>
+                <p class="tablets-y-menos">viernes: Jiujitsu 15hs, Danza clasica 18:30hs, Jiujitsu 19hs, Full-contact 20hs, TKD 20hs</p>
             </div>
             <div class="horarios-texto">
                 <p>Musculación: lunes a viernes de 8:30hs a 21:30hs y sábado de 8:30hs a 13:30hs </p>
             </div>
         </div>
     </div>
+
 
 
    <!-- Inicio Footer -->
