cambios generales y cambios en miperfil

--- a/pages/rutinas.html
+++ b/pages/rutinas.html
@@ -15,7 +15,7 @@
     <!-- Inicio Header -->
 
     <header>
-        <section class="seccion-titulo">
+        <section>
             <p>
                 <a class="nombregimnasio" href="../index.html">PROCENTER</a>
             </p>
