establecemos el seo para nuestro Index y posterior reacomodo en nuestros distintos html

--- a/pages/ejerciciopedia.html
+++ b/pages/ejerciciopedia.html
@@ -6,9 +6,10 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
-    <!-- CSS -->
 
-    <title>Procenter - Ejerciciopedia</title>
+    <link rel="shortcut icon" href="imagenes/logoreal.ico" type="image/x-icon">
+
+    <title>Procenter - Ejerciciopedia para definir tu rutina</title>
 </head>
 <body>
 
