--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -7,8 +7,9 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
+    <link rel="shortcut icon" href="imagenes/logoreal.ico" type="image/x-icon">
 
-    <title>Procenter - Horarios</title>
+    <title>Procenter - Horarios de actividades ofrecidas</title>
 </head>
 <body>
     
