--- a/pages/rutinas.html
+++ b/pages/rutinas.html
@@ -6,9 +6,10 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
-    <!-- CSS -->
+    
+    <link rel="shortcut icon" href="imagenes/logoreal.ico" type="image/x-icon">
 
-    <title>Procenter - Rutinas</title>
+    <title>Procenter - Rutinas e historial</title>
 </head>
 <body>
     
