--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="css/style.css">
 
 
+    <link rel="shortcut icon" href="imagenes/logoreal.ico" type="image/x-icon">
+
+
+
+    <meta property="og:image" content="https://procenter.com/logoreal.png">
+    <meta property="og:url" content="https://procenter.com">
+    <meta property="og:description" content="Bienvenido a Procenter, un espacio donde puedes dedicarte a la musculacion o a realizar deportes que van desde el squash hasta el deporte de contacto">
+    <meta property="og:title" content="Procenter: Gimnasio, squash, boxeo y mas">
+
+    <meta name="description" content="Bienvenido a Procenter, un espacio donde puedes dedicarte a la musculacion o a realizar deportes que van desde el squash hasta el deporte de contacto">
+
+
+    <meta name="keywords" content="Gimnasio, gimnasio musculacion, squash, boxeo, karate, Jiujitsu">
+
+
+
+
+
+
+
     <title>Procenter: Gimnasio, squash, boxeo y mas</title>
 </head>
 <body>  
