--- a/pages/miperfil.html
+++ b/pages/miperfil.html
@@ -10,10 +10,10 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
-    
+    <link rel="shortcut icon" href="imagenes/logoreal.ico" type="image/x-icon">
 
     
-    <title>Procenter - Mi Perfil</title>
+    <title>Procenter - Perfil del usuario</title>
 </head>
 <body>
 
