correccion de responsive para index

--- a/pages/miperfil.html
+++ b/pages/miperfil.html
@@ -22,7 +22,7 @@
     <header class="h-perfil">
         <section class="seccion-titulo">
             <p class="p-perfil">
-                <a class="a-perfil" href="../index.html">PROCENTER</a>
+                <a class="nombregimnasio" href="../index.html">PROCENTER</a>
             </p>
             
             <div class="logoInicio-padre">
