--- a/pages/rutinas.html
+++ b/pages/rutinas.html
@@ -11,10 +11,10 @@
 
     <meta property="og:image" content="https://procenter.com/logoreal.png">
     <meta property="og:url" content="https://procenter.com">
-    <meta property="og:description" content="Bienvenido a Procenter, un espacio donde puedes dedicarte a la musculacion o a realizar deportes que van desde el squash hasta el deporte de contacto">
+    <meta property="og:description" content="Bienvenido a Procenter, un espacio donde puedes dedicarte tanto a la musculacion como a realizar deportes que van desde el squash hasta el deporte de contacto">
     <meta property="og:title" content="Procenter - Rutinas e historial">
 
-    <meta name="description" content="Bienvenido a Procenter, un espacio donde puedes dedicarte a la musculacion o a realizar deportes que van desde el squash hasta el deporte de contacto">
+    <meta name="description" content="Bienvenido a Procenter, un espacio donde puedes dedicarte tanto a la musculacion como a realizar deportes que van desde el squash hasta el deporte de contacto">
 
 
     <meta name="keywords" content="Gimnasio, gimnasio musculacion, squash, boxeo, karate, Jiujitsu">
