--- a/pages/ejerciciopedia.html
+++ b/pages/ejerciciopedia.html
@@ -7,7 +7,18 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <link rel="shortcut icon" href="imagenes/logoreal.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/logoreal.ico" type="image/x-icon">
+
+    <meta property="og:image" content="https://procenter.com/logoreal.png">
+    <meta property="og:url" content="https://procenter.com">
+    <meta property="og:description" content="Bienvenido a Procenter, un espacio donde puedes dedicarte tanto a la musculacion como a realizar deportes que van desde el squash hasta el deporte de contacto">
+    <meta property="og:title" content="Procenter - Ejerciciopedia para definir tu rutina">
+
+    <meta name="description" content="Bienvenido a Procenter, un espacio donde puedes dedicarte tanto a la musculacion como a realizar deportes que van desde el squash hasta el deporte de contacto">
+
+
+    <meta name="keywords" content="Gimnasio, gimnasio musculacion, squash, boxeo, karate, Jiujitsu">
+
 
     <title>Procenter - Ejerciciopedia para definir tu rutina</title>
 </head>
