--- a/pages/ejerciciopedia.html
+++ b/pages/ejerciciopedia.html
@@ -49,7 +49,7 @@
                 <a href="">Ingresar</a> 
             </p>
     
-            <div class="img-perfil">
+            <div class="img-perf-usuario">
                 <img class="img-perfilhijo" src="../imagenes/perfilusuario.png" alt="">
             </div>
         </div>
