--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </p>
     
             <div class="img-perf-usuario">
-                <img src="./imagenes/perfilusuario.png" alt="">
+                <img class="img-perfilhijo" src="./imagenes/perfilusuario.png" alt="">
             </div>
         </div>
     </header>
