--- a/pages/miperfil.html
+++ b/pages/miperfil.html
@@ -67,7 +67,7 @@
                 Mi Perfil
             </h1>
             <div class="img-miniperfil">
-                <img class="img-miniperfilhijo" src="../imagenes/perfilusuario.png" alt="">
+                <img class="img-perfilhijo" src="../imagenes/perfilusuario.png" alt="">
             </div>
         </div>
 
