--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     <div class="pag-inicio">
         <div class="img-izq">
             <div class="imagen-container">
-                <img src="imagenes/musculacion.jpg" alt="">
+                <img src="imagenes/Musculacion.jpg" alt="">
             </div>
             <div class="imagen-container">
-                <img src="imagenes/squash.jpg" alt="">
+                <img src="imagenes/Squash.jpg" alt="">
             </div>
         </div>
         <main class="planes">
