--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <img src="imagenes/Musculacion.jpg" alt="">
             </div>
             <div class="imagen-container">
-                <img src="imagenes/Squash.jpg" alt="">
+                <img src="imagenes/squash.JPG" alt="">
             </div>
         </div>
         <main class="planes">
