modifico los url de los html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </p>
     
             <div class="img-perf-usuario">
-                <img class="img-perfilhijo" src="./imagenes/perfilusuario.png" alt="">
+                <img class="img-perfilhijo" src="./imagenes/perfilusuario.png" alt="foto usuario">
             </div>
         </div>
     </header>
@@ -68,10 +68,10 @@
     <div class="pag-inicio">
         <div class="img-izq">
             <div class="imagen-container">
-                <img src="imagenes/Musculacion.jpg" alt="">
+                <img src="imagenes/Musculacion.jpg" alt="Musculacion">
             </div>
             <div class="imagen-container">
-                <img src="imagenes/squash.JPG" alt="">
+                <img src="imagenes/squash.JPG" alt="Squash">
             </div>
         </div>
         <main class="planes">
@@ -94,10 +94,10 @@
         </main>
         <div class="img-der">
             <div class="imagen-container">
-                <img src="imagenes/boxeomasculino.jpg" alt="">
+                <img src="imagenes/boxeomasculino.jpg" alt="Boxeo">
             </div>
             <div class="imagen-container">
-                <img src="imagenes/muaythai.jpg" alt="">
+                <img src="imagenes/muaythai.jpg" alt="Muaythai">
             </div>
         </div>
     </div>
