cambio en responsive footer

--- a/pages/miperfil.html
+++ b/pages/miperfil.html
@@ -183,7 +183,7 @@
     
     <!-- Navegacion -->
 
-    <nav>
+    <nav class="pestañas-footer">
         <ul>
             <li>
                 <a href="miperfil.html">Perfil</a>
