--- a/pages/rutinas.html
+++ b/pages/rutinas.html
@@ -106,7 +106,7 @@
     
     <!-- Social media -->
 
-    <nav>
+    <nav class="pestañas-footer">
         <ul >
             <li>
                  <div class="img-redes-sociales">
