--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <a href="pages/ejerciciopedia.html">Ejerciciopedia</a>
             </li>
             <li>
-                <a href="pages/horarios.html">Horarioooos</a>
+                <a href="pages/horarios.html">Horarios</a>
             </li>
         </ul>
     </nav>
