--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/stlye.css">
 
     <link rel="shortcut icon" href="../imagenes/logoreal.ico" type="image/x-icon">
 
