cambios en urls

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <header>
         <section>
             <p>
-                PROCENTER
+                <a href="./index.html">PROCENTER</a>
             </p>
             
             <div>
