--- a/pages/miperfil.html
+++ b/pages/miperfil.html
@@ -181,18 +181,18 @@
     <!-- Navegacion -->
 
     <nav class="pestañas-footer">
-        <ul>
-            <li>
-                <a href="miperfil.html">Perfil</a>
+        <ul class="ul-footer">
+            <li class="li-footer">
+                <a class="a-footer" href="miperfil.html">Perfil</a>
             </li>
-            <li>
-                <a href="rutinas.html">Rutinas</a>
+            <li class="li-footer">
+                <a class="a-footer" href="rutinas.html">Rutinas</a>
             </li>
-            <li>
-                <a href="ejerciciopedia.html">Ejerciciopedia</a>
+            <li class="li-footer"> 
+                <a class="a-footer" href="ejerciciopedia.html">Ejerciciopedia</a>
             </li>
-            <li>
-                <a href="horarios.html">Horarios</a>
+            <li class="li-footer">
+                <a class="a-footer" href="horarios.html">Horarios</a>
             </li>
         </ul>
     </nav>
