--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Inicio Header -->
 
    
-    <!-- <header>
+    <header>
         <section>
             <p>
                 <a href="./index.html">PROCENTER</a>
@@ -63,7 +63,7 @@
                 <img class="img-perfilhijo" src="./imagenes/foto-perfil-usuario-generico.png" alt="foto usuario">
             </div>
         </div>
-    </header> -->
+    </header>
    
     <!-- Inicio cuerpo -->
 
