--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -63,7 +63,7 @@
         </h1>
         <div class="horarios">
             <div>
-                <img src="../imagenes/Horarios.png" alt="">
+                <img src="../imagenes/horarios.png" alt="">
                 <p class="tablets-y-menos">Lunes: Jiujitsu 15hs, Jiujitsu 19hs, Boxeo 19hs, Full-contact 20hs, TKD 20hs</p>
                 <p class="tablets-y-menos">Martes: TKD 10hs, Danza clasica 18:30hs, Karate 19hs</p>
                 <p class="tablets-y-menos">Miercoles: Jiujitsu 15hs, Danza clasica 18:30hs, Jiujitsu 19hs, Boxeo 19hs, Full-contact 20hs, TKD 20hs</p>
