modificaciones en horarios

--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -64,11 +64,14 @@
         <div class="horarios">
             <div>
                 <img src="../imagenes/horarios.png" alt="">
-                <p class="tablets-y-menos">Lunes: Jiujitsu 15hs, Jiujitsu 19hs, Boxeo 19hs, Full-contact 20hs, TKD 20hs</p>
-                <p class="tablets-y-menos">Martes: TKD 10hs, Danza clasica 18:30hs, Karate 19hs</p>
-                <p class="tablets-y-menos">Miercoles: Jiujitsu 15hs, Danza clasica 18:30hs, Jiujitsu 19hs, Boxeo 19hs, Full-contact 20hs, TKD 20hs</p>
-                <p class="tablets-y-menos">Jueves: TKD 10hs, Danza clasica 18:30hs, Karate 19hs</p>
-                <p class="tablets-y-menos">viernes: Jiujitsu 15hs, Danza clasica 18:30hs, Jiujitsu 19hs, Full-contact 20hs, TKD 20hs</p>
+                <div>
+                    <p class="tablets-y-menos"><img class="horarios-por-dia" src="../imagenes/horarios-lunes.png" alt="Horarios dia lunes"></p>
+                    <p class="tablets-y-menos"><img class="horarios-por-dia" src="../imagenes/horarios-martes.png" alt="Horarios dia martes"></p>
+                    <p class="tablets-y-menos"><img class="horarios-por-dia" src="../imagenes/horarios-miercoles.png" alt="Horarios dia miercoles"></p>
+                    <p class="tablets-y-menos"><img class="horarios-por-dia" src="../imagenes/horarios-jueves.png" alt="Horarios dia jueves"></p>
+                    <p class="tablets-y-menos"><img class="horarios-por-dia" src="../imagenes/horarios-viernes.png" alt="Horarios dia viernes"></p>
+                </div>
+                
             </div>
             <div class="horarios-texto">
                 <p>Musculación: lunes a viernes de 8:30hs a 21:30hs y sábado de 8:30hs a 13:30hs </p>
