--- a/pages/ejerciciopedia.html
+++ b/pages/ejerciciopedia.html
@@ -58,7 +58,7 @@
     <!-- Cuerpo pagina -->
 
     <div>
-        <h1>
+        <h1 class="titulo-h1">
             Ejerciciopedia
         </h1>
         <div class="ejercicio">
