--- a/pages/miperfil.html
+++ b/pages/miperfil.html
@@ -63,7 +63,7 @@
     <!-- Cuerpo pagina -->
    <div>
         <div class="miperfil">
-            <h1>
+            <h1 class="titulo-h1">
                 Mi Perfil
             </h1>
             <div class="img-miniperfil">
