--- a/pages/rutinas.html
+++ b/pages/rutinas.html
@@ -57,7 +57,7 @@
     <!-- Cuerpo pagina -->
 
     <div class="rutinas">
-        <h1>
+        <h1 class="titulo-h1">
             Rutinas
         </h1>
         <div class="contenedor-div">
