--- a/pages/horarios.html
+++ b/pages/horarios.html
@@ -58,7 +58,7 @@
     <!-- Cuerpo pagina -->
 
     <div>
-        <h1>
+        <h1 class="titulo-h1">
             Horarios
         </h1>
         <div class="horarios">
